# ChangeLog for dev-ruby/actionpack
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/actionpack/ChangeLog,v 1.271 2014/04/21 06:16:15 graaff Exp $

  21 Apr 2014; Hans de Graaff <graaff@gentoo.org> actionpack-4.0.4.ebuild:
  Add ruby20, ruby21.

*actionpack-4.0.4 (05 Apr 2014)

  05 Apr 2014; Hans de Graaff <graaff@gentoo.org> +actionpack-4.0.4.ebuild:
  Rails 4.0.4 version bump.

  11 Mar 2014; Johannes Huber <johu@gentoo.org> actionpack-4.0.2.ebuild,
  actionpack-4.0.3.ebuild:
  ~x86 added, bug #487206

*actionpack-4.0.3 (19 Feb 2014)

  19 Feb 2014; Hans de Graaff <graaff@gentoo.org> +actionpack-4.0.3.ebuild:
  Version bump for security bug 501750.

*actionpack-3.2.17 (19 Feb 2014)

  19 Feb 2014; Hans de Graaff <graaff@gentoo.org> +actionpack-3.2.17.ebuild:
  Version bump for security bug 501750.

  18 Jan 2014; Hans de Graaff <graaff@gentoo.org> -actionpack-2.3.18.ebuild:
  Remove masked version.

  16 Dec 2013; Hans de Graaff <graaff@gentoo.org> -actionpack-3.2.15.ebuild,
  -actionpack-4.0.0.ebuild:
  Cleanup for security bug 493284.

*actionpack-4.0.2 (04 Dec 2013)

  04 Dec 2013; Hans de Graaff <graaff@gentoo.org> +actionpack-4.0.2.ebuild:
  Version bump for security bug 493284.

*actionpack-3.2.16 (04 Dec 2013)

  04 Dec 2013; Hans de Graaff <graaff@gentoo.org> +actionpack-3.2.16.ebuild:
  Version bump for security bug 493284.

  29 Nov 2013; Hans de Graaff <graaff@gentoo.org> -actionpack-3.1.12.ebuild:
  Remove masked Rails 3.1.

  10 Nov 2013; Hans de Graaff <graaff@gentoo.org> -actionpack-3.2.13.ebuild,
  -actionpack-3.2.14.ebuild:
  Cleanup.

*actionpack-3.2.15 (17 Oct 2013)

  17 Oct 2013; Hans de Graaff <graaff@gentoo.org> +actionpack-3.2.15.ebuild:
  Version bump for security bug 488298.

  13 Oct 2013; Markus Meier <maekke@gentoo.org> actionpack-4.0.0.ebuild:
  add ~arm, bug #487206

  13 Oct 2013; Hans de Graaff <graaff@gentoo.org> actionpack-3.1.12.ebuild,