@@ -4,10 +4,10 @@ DESCRIPTION=A port of KAME's IPsec utilities to the Linux-2.6 IPsec implementati
 EAPI=5
 HOMEPAGE=http://ipsec-tools.sourceforge.net/
 IUSE=hybrid idea ipv6 kerberos ldap nat pam rc5 readline selinux stats
-KEYWORDS=~amd64 ~arm ~mips ppc ppc64 ~x86
+KEYWORDS=~amd64 arm ~mips ppc ppc64 ~x86
 LICENSE=BSD GPL-2
 RDEPEND=dev-libs/openssl kerberos? ( virtual/krb5 ) ldap? ( net-nds/openldap ) pam? ( sys-libs/pam ) readline? ( sys-libs/readline ) selinux? ( sys-libs/libselinux sec-policy/selinux-ipsec )
 SLOT=0
 SRC_URI=mirror://sourceforge/ipsec-tools/ipsec-tools-0.8.2.tar.bz2
 _eclasses_=autotools	5256b4f4c1798109f39f308f9f7eaf5f	eutils	af81d52c25ec93fbdff71e0efb0de7b7	flag-o-matic	9a539029fe1d390c1828ff633baf26b5	libtool	b9b3340e3a19510f0d9f05cfccbf209f	linux-info	90944ede7e9761bd7ef07602acdef9e3	multilib	fac675dcccf94392371a6abee62d909f	multiprocessing	c2d96fb38f2596209e98fceda58ba1ed	pam	5c1a9ef4892062f9ec25c8ef7c1f1e52	toolchain-funcs	48b38a216afb92db6314d6c3187abea3	versionator	a8a3963967d6140be9a14b08bb8f047f
-_md5_=14ecb6f8c3de21ffd335d067ad262fb5
+_md5_=84f58e3a9b25997e2d5e5a8ed5ed861d
