@@ -18,23 +18,23 @@ DIST ipsec-tools-0.8.2.tar.bz2 866465 SHA256 8eb6b38716e2f3a8a72f1f549c9444c2bc2
 EBUILD ipsec-tools-0.8.0-r5.ebuild 7714 SHA256 0040584495b6677d1ffd09a81bf13ce23bce4d3892f04a5efc19e3d8de2cf235 SHA512 14ee667ead84cf6faa2c9a85a71cf2c868a13f6f406f706287cc982c6a9b209543293d22ba53faa0cf15045cb84ae7d7d5a1b5707cd7e697516d1dfa5efe419a WHIRLPOOL 76f48f99d196614ffaf4e1c0900fa768c135ae9e16cfcb8e2c9e2829d94a7e33e83198b2224bd800f2e37b4cd56616f08d26d2e3d6cccf04e1c9ce83b3ad3ab8
 EBUILD ipsec-tools-0.8.1-r1.ebuild 7724 SHA256 a9410894408eaec51f7a63b6d346cb2e99eb89b08c2f1e8800fed6dbfcd00103 SHA512 7fcd5a3cd47ba4d842a4a3fe76bd490ffcf567d1c1483d16c6bc211dfd965cad6b3dd0825c512eb76497691b08a40dcf4c6b10947974a93d58bf9fabc2765cee WHIRLPOOL bf2b5ea151651a2d8b6a9a273b58e7b0d38679db56b5a55d2df53f2e463e3b45e4c2767802b42c647e6db67ac4d375cfd784141b3b30f99d19fe4691be4fbb12
 EBUILD ipsec-tools-0.8.1.ebuild 7726 SHA256 7955af832e48fd8c5458092791124ba9f51a7fe5fed6d9c47a197fa8816b4181 SHA512 fc51fdc355958c198a475ee3df53ea98c809f8254d4c37acc09f9444f8913dc74018fd34f39a875c15a5caae09127d96021eea55159f6a9f558b8ad9a4ade5ac WHIRLPOOL 0999bd6569784152d3849da39ead8b262670a6de2aa5597e00a3cf06b1eac32508f102d8134d8273c50e676938518a6910f65aa6aa92500111952940509f1fbb
-EBUILD ipsec-tools-0.8.2.ebuild 7726 SHA256 9c7f9c5daaa4bc20630b4148287a7bd0202f09312d47eff8855962636fee7647 SHA512 0aa5c33b2545d7926d3654666a92eb5e2f59ef79dc6959be807d7adefe397f6394b67086e22176f41b9e238fd72b8a17be1b28295dda04d4434dbce7825bcda4 WHIRLPOOL 30bb20a5b0245be2ae915b8abebca1808c71ac957d19436f7ac3a9ebeda967e8a269a47183b62adad78bc857628507d577746d0a998f0c8e30df9f8bd0a42ac6
-MISC ChangeLog 19582 SHA256 8308f8280e770faaf71b0ca8968716c48174f1c5528b542fa18095fde419d870 SHA512 4f4963eb4948d9c4f9514f7dd21d37f0c6f2578961e1864b8a51dbd5b0db51c5eacd7a49d41c8fd1d0bd271f84998fdd886719f312fcf0fc3fa447518a44c0a3 WHIRLPOOL b98a88a9af62e36791ee140197add85bd16b61e9aaf0825d90fbe64a5d0bef79a3f449c6ba3f548bedd7546e4d5f5375efe408bcf73cddd3dc3f1835e4e5877e
+EBUILD ipsec-tools-0.8.2.ebuild 7725 SHA256 e04c4a8e6cc97dace5bc16037ab9091c709f04d60e249523a17a80853a3c521d SHA512 ac2ce625380326e06fd8c161a4c4b12a159ff40b441b9ee601c550db474aa000881397f0cd94cbfbaab1358133487815a077a3c560802133721388d99782fe8d WHIRLPOOL 5366ab6993a25eac277b5cf7c561787731724d87d17a122e401eafbba6b05549156edc69211ade0dd0ff00ec94329984f5ab6f3d2ca010563fe63c3ad5765248
+MISC ChangeLog 19690 SHA256 e56a8af3bbf614d8dff2573c5920dd2bd55e0367695ceda5eccc90be493d988f SHA512 0e48fe1c767e379bf34a121ebc472751e86144c1119f4a2298970df1a3882444b0e39ede1b3fe7508e3ad7602f4679d500a97235ba45da8268b1a90b85805320 WHIRLPOOL 5e8060a861cb6215c0890f48e6d16380a9792719dea5f4f20a8bef08b579a298c9b1ee952df7dc1aec9f36030e4d64845dd9bb7ef4052ea97651ec5fed7e9a9a
 MISC metadata.xml 537 SHA256 12de55d6d62b8e91c8996422e33462b5637f9720a5096025752b93906bcbdc40 SHA512 9b26b2cd54e00527201339c3936ac717c57fe596e470d84e0dc0715f778b5797488b6cac61dea83bab61714a23a88e44dbd537bfeeb2b37d285653dcb838fab5 WHIRLPOOL a0dd0b61f957875ca3c50db5aa66470ed493be9c4f002bd165d75b41a8ca51cbcfd2567b4702bf1845b8e0a1ca54239e6ed163098d8b613d1f9f459192acc14e
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQIcBAEBCAAGBQJTU9F7AAoJEJOE+m71LUu6GoUQAKgJmZAZnldy7ewr4vEw6v1A
-h2bT2dmvBBb4s7xtleLM3H9soBdVGGa1V8U+D7UBjXd3bJowrRzlxIrrj4Gs94p4
-TFDD9BycZXhgIHPusP2/l3NW6eXVSk6iK3jj47JviF0pm1QTK7UuDRiFKqhM2yg3
-/A9/i4FomNzHt+LNfBmBLcj9D7ZT5sQl/nfDPl/RCXyyatD44saaPfWlWinturvI
-HjZsVT4MiDq/dyFvSs5XCA+qzENqtZrKq0THAPRKqDDOpOdqi0Q6lCmk+T7POSx3
-VxlnoOcVvBgJ0tS3nglNrDozq/drlg+jzfHk2nr7u5OuNwitJHJboHSY3TwMBaid
-ncWNCRmkjBnCkKCjPvfdPEBJKY9cFp2xic1MPQJMZ33X3nCMO3yEWSV5BzffXn4G
-EQnGCfqPRmt7TWiR97oXDOcjSqCcSDHtkPJHBbi3uzqrhlwc+ONeGTPm3FfgIYwP
-AixL11I0gXLV4Xgu3pVsh4FlPA2xYSNho+fCCFvVHhOA5wNPRAjztWssVO7kRIAQ
-n0iIMZY2u3xf67T4p1AwkuIOM37HFsbNXB5TxZI9QLFSc8HyxrZe1k7PI3+zO+N7
-P79o4hLkwylnGPOUhKSr6s78H70wArAlGpg2jPfX7Q1f+AqoupYGLDja2mE3VbhJ
-966tPqslAjwWxRtlP7pb
-=AeOv
+iQIcBAEBCAAGBQJTVQ6TAAoJEJOE+m71LUu6iF4P/RzxmycOMlU0Rvbl20490cYq
+4k84+8PvZ0AxeZOM97uRHQYpYouNbjZWMiNaHI9B0G0yLvCcsp+st+YzgJn5ryTz
+JMdxTpnnUs6Zweee/8V1F+19DZ18sDWxoQoL++Nw3fcak9AxO5wRtT6XWNekvaO/
+1Lk3VpllrtyE9Yw8J+l3lpmMkhmvtMpVjHBflqIqyiLjAnVTE0J24vRQSVXftnGv
+CJfCdGdye/qtjcdySTvV7yBbBpehYtI2RE/beLRNjmXWyGNnka2nN5gTcKyDFdzH
+CpX37hGx8+et2dCbx9EL9kr/vOZDK6apsSvYsJVAkby+aNarbwReppbT5Vx2t222
++lLFSs+s7zPwzZp2tta+ZMhY+JbJnewjOuI8KwT2U9KACaIZ7gOFasjBeW/PeY1v
+HxOsm9oCbIwxUtK73VW3pBk2947NnXpXFa1yRTxYitX7po/0zVGKesyYqvk40hUc
+DUYIwfqIX+pZ0yb+ioh1HsbPdAj7wKJQNR6CySyg8BTlFRk+N9wzF30S0IN8ObXO
+KXfMxo9KLYl4np/MlBdCgCGpPVMahA16UqeNzK6RFEhxz6VTnqhPA2cCzEep7Zts
+pMjGzBapiHdKBRVobJOO3PVgu3FtkdzyX/q46fuBfPSBshw908HjfLi4ms6gMC3T
+pd4sh599quiiladf00Wa
+=ysTo
 -----END PGP SIGNATURE-----
