@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/activerecord
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/activerecord/ChangeLog,v 1.259 2014/04/21 06:17:08 graaff Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/activerecord/ChangeLog,v 1.260 2014/04/21 12:14:22 graaff Exp $
+
+  21 Apr 2014; Hans de Graaff <graaff@gentoo.org> activerecord-3.2.17.ebuild:
+  Remove nokogiri from Gemfile as it is not needed for the tests.
 
   21 Apr 2014; Hans de Graaff <graaff@gentoo.org> activerecord-4.0.4.ebuild:
   Add ruby20, ruby21.
