@@ -1,6 +1,9 @@
 # ChangeLog for net-firewall/ipsec-tools
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-firewall/ipsec-tools/ChangeLog,v 1.123 2014/04/20 13:53:16 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-firewall/ipsec-tools/ChangeLog,v 1.124 2014/04/21 12:26:31 blueness Exp $
+
+  21 Apr 2014; Anthony G. Basile <blueness@gentoo.org> ipsec-tools-0.8.2.ebuild:
+  Stable arm, bug #508228
 
   20 Apr 2014; Anthony G. Basile <blueness@gentoo.org> ipsec-tools-0.8.2.ebuild:
   Stable ppc ppc64, bug #508228
